# quote-vault

./: .gitignore  README.md  pyproject.toml
quote_scraper/: main.py
quote_scraper/scraper/: scraper.py
quote_scraper/storage/: json_writer.py
quote_scraper/utils/: date_processor.py  logger.py  text_processor.py  url_processor.py  utils.py
