[project]
name = "quote-vault"
version = "0.1.0"
description = "Scrape quotes and authors, then store and manage them in MongoDB using Python"
authors = [
    {name = "Aleksander Khreptak",email = "alex.nuclearboy@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
